fixed the login test

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BASE_URL=https://frontendui-libraby.onrender.com
+BASE_URL=https://frontendui-librarysystem.onrender.com/
 USERNAME=admin
 PASSWORD=admin123
