--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
+    "test:debug": "playwright test --debug",
+    "lint": "biome check",
+    "lint:fix": "biome check --write"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,5 +19,8 @@
     "dotenv": "^17.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@biomejs/biome": "^0.3.3"
   }
 }
