--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-	"name": "playwrighttslibrarysystem",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "npx playwright test",
-		"test:chromium": "npx playwright test --project=chromium",
-		"test:firefox": "npx playwright test --project=firefox",
-		"test:webkit": "npx playwright test --project=webkit",
-		"test:headed": "npx playwright test --headed",
-		"test:report": "npx playwright test && npx playwright show-report",
-		"test:ui": "npx playwright test --ui",
-		"test:debug": "playwright test --debug",
-		"lint": "biome check",
-		"lint:fix": "biome check --write"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@playwright/test": "^1.58.2",
-		"@types/node": "^25.2.3",
-		"dotenv": "^17.3.1",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.9.3"
-	},
-	"dependencies": {
-		"@biomejs/biome": "^2.4.2"
-	}
+  "name": "playwrighttslibrarysystem",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "npx playwright test",
+    "test:chromium": "npx playwright test --project=chromium",
+    "test:firefox": "npx playwright test --project=firefox",
+    "test:webkit": "npx playwright test --project=webkit",
+    "test:headed": "npx playwright test --headed",
+    "test:report": "npx playwright test && npx playwright show-report",
+    "test:ui": "npx playwright test --ui",
+    
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@playwright/test": "^1.58.2",
+    "@types/node": "^25.2.3",
+    "dotenv": "^17.3.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^17.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0"
+  }
 }
